2018-04-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Implement missing subrange logic to
	read only the specified range of frames.  Limits frames read from
	oss-fuzz test case
	clusterfuzz-testcase-minimized-coder_TEXT_fuzzer-6061076048248832
	"graphicsmagick/coder_TEXT_fuzzer: Timeout in
	graphicsmagick_coder_TEXT_fuzzer". (Credit to OSS-Fuzz).

	* Magick++/lib/Image.cpp (read): Set subrange = 1 since this
	interface is intended to read just one frame from the input file.
	Use the STL-based interfaces to read multiple frames.

	* coders/fits.c (ReadFITSImage): Verify FITS header before reading
	further.  Rejects file from oss-fuzz 7650
	"graphicsmagick/coder_FITS_fuzzer: Out-of-memory in
	graphicsmagick_coder_FITS_fuzzer".  (Credit to OSS-Fuzz).

	* PerlMagick/Magick.xs (Get): Fix PerlMagick compilation problem
	due to rename/repurposing of image->clip_mask.

2018-04-13  Greg Wolfe  <gregory.wolfe@kodakalaris.com>

	* magick/image.c, magick/image.h:  In order to be able to
	support SVG masks, and to be able to further extend the
	Image data structure without changing its size, new data
	structure ImageExtra (struct _ImageExtra) has been added.
	Header file image.h contains only a forward declaration;
	the members of ImageExtra are defined in file image.c.
	Image member variable Image * clip_mask has been replaced
	by ImageExtra * extra, and function prototypes that enable
	access to ImageExtra have been added to image.h.  The
	clip_mask member variable now resides in ImageExtra.  All
	references to Image::clip_mask in the GraphicsMagick
	source code have either been replaced with direct references
	to ImageExtra::clip_mask (image.c), or have been replaced
	with calls to access function ImageGetClipMask().

	* magick/render.c, magick/render.h:  In order to be able to
	support SVG masks, and to be able to further extend the
	DrawInfo data structure without changing its size, new data