@@ -222,6 +222,10 @@ static Image *ReadRLAImage(const ImageInfo *image_info,ExceptionInfo *exception)
   MagickPassFail
     status;
 
+  magick_off_t
+    current_offset,
+    file_size;
+
   /*
     Open image file.
   */
@@ -233,6 +237,8 @@ static Image *ReadRLAImage(const ImageInfo *image_info,ExceptionInfo *exception)
   status=OpenBlob(image_info,image,ReadBinaryBlobMode,exception);
   if (status == MagickFail)
     ThrowReaderException(FileOpenError,UnableToOpenFile,image);
+  if (BlobIsSeekable(image))
+    file_size=GetBlobSize(image);
   is_rla3=MagickFalse;
   memset(&rla_info,0,sizeof(rla_info));
   memset(&rla3_extra_info,0,sizeof(rla3_extra_info));
@@ -460,6 +466,23 @@ static Image *ReadRLAImage(const ImageInfo *image_info,ExceptionInfo *exception)
   if (LocaleNCompare(rla_info.chan,"rgb",3) != 0)
     ThrowRLAReaderException(CoderError,ColorTypeNotSupported,image);
 
+  if (rla_info.number_channels > 3)
+    {
+      if (image->logging)
+            (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                  "Unsupported number of color channels: %u",
+                                  rla_info.number_channels);
+      ThrowRLAReaderException(CorruptImageError,UnsupportedNumberOfPlanes,image);
+    }
+  if (rla_info.number_matte_channels > 1)
+    {
+      if (image->logging)
+            (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                  "Unsupported number of matte channels: %u",
+                                  rla_info.number_matte_channels);
+      ThrowRLAReaderException(CorruptImageError,UnsupportedNumberOfPlanes,image);
+    }
+
   /*
     Initialize image structure.
   */
@@ -489,6 +512,7 @@ static Image *ReadRLAImage(const ImageInfo *image_info,ExceptionInfo *exception)
   /*
     Read offsets to each scanline data.
   */
+  current_offset=TellBlob(image);
   for (i=0; i < image->rows; i++)
     {
       scanlines[i]=(magick_uint32_t) ReadBlobMSBLong(image);
@@ -497,6 +521,29 @@ static Image *ReadRLAImage(const ImageInfo *image_info,ExceptionInfo *exception)
         (void) LogMagickEvent(CoderEvent,GetMagickModule(),
                               "scanline[%ld] = %lu",i,(unsigned long) scanlines[i]);
 #endif
+      if ((magick_off_t) scanlines[i] > file_size)
+        {
+          if (image->logging)
+            (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                  "scanline[%ld] offset %lu is beyond end of file",
+                                  i,(unsigned long) scanlines[i]);
+          ThrowRLAReaderException(CorruptImageError,UnexpectedEndOfFile,image);
+        }
+      if ((magick_off_t) scanlines[i] < current_offset)
+        {
+          if (image->logging)
+            (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                  "scanline[%ld] offset %lu is too small!",
+                                  i,(unsigned long) scanlines[i]);
+          ThrowRLAReaderException(CorruptImageError,ImproperImageHeader,image);
+        }
+      if ((i != 0) && (scanlines[i-1] == scanlines[i]))
+        {
+          if (image->logging)
+            (void) LogMagickEvent(CoderEvent,GetMagickModule(),
+                                  "scanline[%ld] offset %lu is a duplicate!",
+                                  i,(unsigned long) scanlines[i]);
+        }
     }
   if (EOFBlob(image))
     ThrowRLAReaderException(CorruptImageError,UnexpectedEndOfFile,image);
