@@ -38,6 +38,10 @@
 <p>2018-04-14  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/rla.c (ReadRLAImage): Add many more validations,
+including scanline offsets and number of channels.  Fixes oss-fuzz
+7653 &quot;graphicsmagick/coder_RLA_fuzzer: Timeout in
+graphicsmagick_coder_RLA_fuzzer&quot;. (Credit to OSS-Fuzz).</li>
 <li>coders/txt.c (ReadTXTImage): Implement missing subrange logic to
 read only the specified range of frames.  Limits frames read from
 oss-fuzz test case
